Fix hang on windows