@@ -62,14 +62,20 @@ public class JavaExportTest {
 
         System.out.println("====================================================");
         Process p;
+        ProcessBuilder pb;
+
         boolean isWindows = System.getProperty("os.name").toLowerCase().startsWith("win");
         if (isWindows) {
             System.out.println("Trying Windows compile...");
-            p = Runtime.getRuntime().exec("gradlew.bat build 2>&1", null, new File("test-resources/RobotBuilderTestProject"));
+            pb = new ProcessBuilder("gradlew.bat", "build").directory(new File("test-resources/RobotBuilderTestProject"));
+            //p = Runtime.getRuntime().exec("gradlew.bat build 2>&1", null, new File("test-resources/RobotBuilderTestProject"));
         } else {
             System.out.println("Trying *NIX compile...");
-            p = Runtime.getRuntime().exec(new String[]{"sh", "-c", "./gradlew build", "2>&1"}, null, new File("test-resources/RobotBuilderTestProject"));
+            pb = new ProcessBuilder("sh -c", "./gradlew build").directory(new File("test-resources/RobotBuilderTestProject"));
+            //p = Runtime.getRuntime().exec(new String[]{"sh", "-c", "./gradlew build", "2>&1"}, null, new File("test-resources/RobotBuilderTestProject"));
         }
+        pb.redirectErrorStream(true);
+        p = pb.start();
         //print the standard output from the build
         BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
         String line = reader.readLine();
@@ -78,12 +84,12 @@ public class JavaExportTest {
             line = reader.readLine();
         }
         //print the error stream from the build
-        reader = new BufferedReader(new InputStreamReader(p.getErrorStream()));
-        line = reader.readLine();
-        while (line != null) {
-            System.out.println(line);
-            line = reader.readLine();
-        }
+ //       reader = new BufferedReader(new InputStreamReader(p.getErrorStream()));
+ //       line = reader.readLine();
+ //       while (line != null) {
+ //           System.out.println(line);
+ //           line = reader.readLine();
+ //       }
         System.out.println("====================================================");
         p.waitFor();
         System.out.println(p.exitValue());
